@@ -1,3 +1,7 @@
+  26 Jul 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-2.7.2.ebuild:
+  dev-vcs/gitlab-shell:  removed ebuild for gitlab-shell-2.7.2, as all available
+  versions of gitlab-ce require >=gitlab-shell-3*
+
 *gitlab-shell-3.2.0 (09 Jul 2016)
 
   09 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.2.0.ebuild:
